# jarvis

./: pnpm-lock.yaml  readme.md  turbo.json
apps/backend/: package.json  scheduleWorkflow.ts
apps/backend/src/: services.ts
apps/backend/src/functions/: index.ts
apps/backend/src/functions/tavus/: conversation.ts  index.ts  persona.ts
apps/backend/src/workflows/: assistant.ts
apps/daily/: package.json  schedule_workflow.py
apps/daily/src/: services.py
apps/daily/src/functions/: daily.py
apps/express/: package.json
apps/express/src/: server.ts
apps/frontend/: package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/actions/: examplesList.tsx  trigger.ts
apps/frontend/src/app/api/create-conversation/: route.ts
apps/frontend/src/components/: ConversationView.tsx  HomePage.tsx  StartButton.tsx
apps/frontend/src/providers/: DailyProvider.tsx
apps/frontend/src/support/: useCallState.ts
apps/llm/: README.md  package.json  pyproject.toml
apps/llm/src/: llm.py
apps/python/: package.json  pyproject.toml  requirements.txt  schedule_workflow.py
apps/python/src/functions/: daily.py
apps/python/src/workflows/: workflow.py
apps/webrtc/: package.json  pyproject.toml
